--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,14 @@
 *.tar.gz
 *.rar
 
+# ignore env file
+.env
+
+# dependencies
+/node_modules
+
+# data
+/User
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
